docs v2: architecture, deployment, nix-build, plugin-spi for the Rust topology
architecture.md now describes the shipped v2: the Rust crate map, the
embedded-JVM island (lazy premain boot, loaned dispatch/control threads,
dispatch-generation recovery ladder, stdout protection), the SQLite-free
durability pipeline (segment fsync -> generational workspace-state ->
manifest.json single commit point -> ArcSwap swap -> janitor-after-drop),
the ratified ID contract change, and the deterministic search tiering —
with the feature-semantics sections (three paths/levels, groups, rename
safety, correctness matrix) kept normative and the matrix table
re-pointed at the Rust suites by test name. deployment.md is the v2
operator guide (Rust binary + island jars, config > env > nix-baked
javaHome, CLI surface, store layout, verification); nix-build.md the v2
build contract (crane workspace, island ivy locking, full checks table,
dev shell, CI). plugin-spi.md drops the forked-worker/SQLite wording for
the embedded island. check-docs.sh gains historical-contrast tolerance
and the fixed grep option order.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>